# Parallel

./: .gitignore
Algorithm/: params.h
Algorithm/main/: 1.out  Makefile  Math.h  main  main.cpp  ntt.cpp  ntt.h  readwrite.cpp  readwrite.h
assignment1/: Compilation1.asm  Compilation2.asm  Compilation3.asm  time.csv  time.xlsx
assignment1/code1/: I  I.cpp  neon_mm  sys  sys.cpp  sysarm  sysarm.cpp
assignment1/code2/: II  II.cpp  IIunrolled.cpp  sys  sys.cpp  sysarm  sysarm.cpp  sysunrolled.cpp
assignment2/: 1  1.cpp  2  2.cpp  Makefile  Math.h  SIMD.cpp  SIMD.h  main  main.cpp  ntt.cpp  ntt.h  params.h  readwrite.cpp  readwrite.h
assignment2/optimize/: 1.out  Makefile  SIMD.cpp  g  galoris.cpp  galoris_barrett.cpp  readwrite.cpp
assignment2/optimizebef/: 1.out  Makefile  Math.cpp  Math.h  main  main.cpp  ntt.cpp  ntt.h  readwrite.cpp
assignment3/: params.h
assignment3/arm/: ntt_common.cpp
assignment3/optimize/: 1.out  Makefile  SIMD.cpp  SIMD.h  asm  main  main.s
assignment3/optimizebef/: 1.out  Makefile  Math.h  SIMD.cpp  (+5 more)
assignment4/: params.h
assignment5/: params.h
assignment6/: params.h
finalassignment/: README.md
finalassignment_common/: CMakeLists.txt
finalassignment_dif/: CMakeLists.txt
finalassignment_dif/src/: CMakeLists.txt
finalassignment_dif/src/fhe/: CMakeLists.txt
finalassignment_dif/src/fhe/common/: ntt.cpp  ntt.h  ntt_nobarrett.cpp  ntt_openmp.cpp  ntt_pthread.cpp
finalassignment_difx4/: CMakeLists.txt  README.md
sometestcode/: 1.in  NTT_Montgomery.cpp  NTT_SIMD.cpp  NTT_common.cpp  NTT_dif.cpp  common  data.cpp
(+454 files in other folders)
